@@ -1,3 +1,9 @@
+version <unreleased>
+
+Extractors
+* [movingimage] Fix for the new site name (#10466)
+
+
 version 2016.08.31
 
 Extractors
